# vwifi

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  hwsim.h  shell.nix
cmake/: cmake_uninstall.cmake.in
nix/: shell.nix
src/: Makefile.am  Makefile.in  addinterfaces.cc  addinterfaces.h  ccoordinate.cc  ccoordinate.h  cctrlserver.cc  cctrlserver.h  cdynbuffer.cc  cdynbuffer.h  cinfosocket.cc  cinfosocket.h  cinfowifi.cc  cinfowifi.h  ckernelwifi.cc  ckernelwifi.h  clistinfo.h  cmonitornetdevice.h  cmonwirelessdevice.cc  cmonwirelessdevice.h  config.h  config_hwsim.h  cscheduler.cc  cscheduler.h  cselect.cc  cselect.h  csocket.cc  csocket.h  csocketclient.cc  csocketclient.h  csocketclientinet.cc  csocketclientinet.h  csocketclientitcp.cc  csocketclientitcp.h  csocketclientvhost.cc  csocketclientvhost.h  csocketclientvtcp.cc  csocketclientvtcp.h  csocketserver.cc  csocketserver.h  (+49 more)
tests/: hostapd_open.conf  hostapd_wep.conf  hostapd_wpa.conf  wpa_supplicant.conf
tools/: Makefile.dependency.sh  client.sh  cppcheck-html.xsl  fast-vwifi-update.sh  start-vwifi-client.sh  start-vwifi-guest.sh
